--- a/考察とか.md
+++ b/考察とか.md
@@ -2,3 +2,37 @@
 
 ## 過去資料あつめ
 まずはここからですよね
+
+**あなたは反革命主義者ですか？**
+現：má ja munconcixcícuku unun-u mú?
+
+**えっと、あなたはタカン語を話せますか？**
+現：a...... má ja tákan-cen ki cema-lu mú? 
+
+**天が光り、心があった**
+古：sútu aíka-u íja aim-u
+現：cútu ja éka-wa íja ém-a-ta
+
+**皇は心の集まりである。**
+古：tákam-ja íjandatu
+現：tákan ja kjádatu únun-u
+
+**川の中に石がある。**
+古：ásu ínuc-ei aim-u
+現：ínuci-kań ásu ja éma-lu
+
+**拾いに行こう。**
+古：mok-ei pom íja-li
+現：mom-e-mok-i-ja-lu
+
+**アリス**
+中(?)：アリスや　そまかぷ　ざもくあな　やのかぷ　しけい　えまる。すのう、さ　わさた　おさ、　もうもう　これう　すかた。あじかがゆ　いくかが、　もく　あたう　えまら　あくき　あたらたのう、ちあな　あくかぷや、けさゆせまら　わさた。「ああ、ちあに　あくかぷ　ずやや　えまる　む？」アリスや　いみかた。「けさゆせまらお　わさたあ。」
+現：アリスや　ツリヨかん　さもくあ　やのかん　しけ　えまる。もうわ、すら　わさた　おさ、　もうもう　こり　さかた。　あじかがゆ　いくかが、　もく　あた　えまら　アクき　あたらたけん、ちあアクかんや、けさゆカツセン　わさた。「あー、　ちあアクかん　ジジツや　えまる　む？」アリスや　いみかた。「けさゆカツセンお　わさたあ。」
+
+
+
+
+
+
+
+
