--- a/考察とか.md
+++ b/考察とか.md
@@ -26,9 +26,8 @@
 現：mom-e-mok-i-ja-lu
 
 **アリス**
-中(?)：アリスや　そまかぷ　ざもくあな　やのかぷ　しけい　えまる。すのう、さ　わさた　おさ、　もうもう　これう　すかた。あじかがゆ　いくかが、　もく　あたう　えまら　あくき　あたらたのう、ちあな　あくかぷや、けさゆせまら　わさた。「ああ、ちあに　あくかぷ　ずやや　えまる　む？」アリスや　いみかた。「けさゆせまらお　わさたあ。」
-現：アリスや　ツリヨかん　さもくあ　やのかん　しけ　えまる。もうわ、すら　わさた　おさ、　もうもう　こり　さかた。　あじかがゆ　いくかが、　もく　あた　えまら　アクき　あたらたけん、ちあアクかんや、けさゆカツセン　わさた。「あー、　ちあアクかん　ジジツや　えまる　む？」アリスや　いみかた。「けさゆカツセンお　わさたあ。」
-
+中(?)：álicu ja cóma kap camóku an jáno kap cikei éma-lu. cunou can wac-a-ta oca moumou koleu cák-a-ta. asíkaga ju ikúkaga móku átau ema-la áku ki atá-la-ta nou tí an áku kap ja kéca ju céma wác-a-ta. "ar tí an áku kap ja cujá ja éma-lu mú?" álicu ja imík-a-ta. kéca ju céma wác-a-ta.
+現：álicu ja tulijo kań cámoku a jáno kań cíke éma-lu. morwa colá wác-a-ta oca mormor kóli cák-a-ta. asíkaga ju ikúkaga móku áta-ma-la áku ki atá-la-ta keń tí a áku kań ja kéca ju káxcen wác-a-ta. "ar tí a áku kań ja sísitu ja éma-lu mú?" álicu ja imík-a-ta. kéca ju káxcen o wác-a-ta.
 
 
 
