--- a/考察とか.md
+++ b/考察とか.md
@@ -26,8 +26,26 @@
 現：mom-e-mok-i-ja-lu  
 
 **アリス**  
-中(?)：álicu ja cóma kap camóku an jáno kap cikei éma-lu. cunou can wác-a-ta oca moumou koleu cák-a-ta. asíkaga ju ikúkaga móku átau éma-la áku ki atá-la-ta nou tí an áku kap ja kéca ju céma wác-a-ta. "ar tí an áku kap ja cujá ja éma-lu mú?" álicu ja imík-a-ta. kéca ju céma wác-a-ta.  
-現：álicu ja tulijo kań cámoku a jáno kań cíke éma-lu. morwa colá wác-a-ta oca mormor kóli cák-a-ta. asíkaga ju ikúkaga móku áta-ma-la áku ki atá-la-ta keń tí a áku kań ja kéca ju káxcen wác-a-ta. "ar tí a áku kań ja sísitu ja éma-lu mú?" álicu ja imík-a-ta. kéca ju káxcen o wác-a-ta.  
+中(?)：álicu ja cóma kan camóku an jáno kan cike éma-lu. cuno can wác-a-ta oca mormor kolo cák-a-ta. asíkaga ju ikúkaga móku áto éma-la áku ki atá-la-ta no tí an áku kan ja kéca ju céma wác-a-ta. "ar tí an áku kan ja cujá ja éma-lu mú?" álicu ja imík-a-ta. kéca ju céma wác-a-ta.  
+現：álicu ja tulijo kań cámoku a jáno kań cíke éma-lu. morwa colá wác-a-ta oca mormor kóli cák-a-ta. asíkaga ju ikúkaga móku áta-ma-la áku ki atá-la-ta keń tí a áku kań ja kéca ju káxcen wác-a-ta. "ar tí a áku kań ja sísitu ja éma-lu mú?" álicu ja imík-a-ta. kéca ju káxcen o wác-a-ta.   
+
+
+## 資料から
+pom-u → mom-u;
+kop(牌音) → kom → kon;  
+
+aika-lu → eka-lu;  
+au → o;
+ei → e;
+eu → o;
+
+n-C(有声阻害音) →C  
+  
+連用形の別の崩壊  
+
+あたりがいわゆる「古典」っぽそう。
+ちょっと後に借用語増加かなあ
+
 
 
 
