--- a/考察とか.md
+++ b/考察とか.md
@@ -26,9 +26,12 @@
 現：mom-e-mok-i-ja-lu  
 
 **アリス**  
-中(?)：álicu ja cóma kan camóku an jáno kan cike éma-lu. cuno can wác-a-ta oca mormor kolo cák-a-ta. asíkaga ju ikúkaga móku áto éma-la áku ki atá-la-ta no tí an áku kan ja kéca ju céma wác-a-ta. "ar tí an áku kan ja cujá ja éma-lu mú?" álicu ja imík-a-ta. kéca ju céma wác-a-ta.  
-現：álicu ja tulijo kań cámoku a jáno kań cíke éma-lu. morwa colá wác-a-ta oca mormor kóli cák-a-ta. asíkaga ju ikúkaga móku áta-ma-la áku ki atá-la-ta keń tí a áku kań ja kéca ju káxcen wác-a-ta. "ar tí a áku kań ja sísitu ja éma-lu mú?" álicu ja imík-a-ta. kéca ju káxcen o wác-a-ta.   
+中(?)：álicu ja cóma kan camóku an jáno kan cike éma-lu. cuno can wác-a-ta oca mormor kolo cak-á-ta. asíkaga ju ikúkaga móku áto éma-la áku ki atá-la-ta no tí an áku kan ja kéca ju céma wác-a-ta. "ar tí an áku kan ja cujá ja éma-lu mú?" álicu ja imík-a-ta. kéca ju céma wác-a-ta.  
+現：álicu ja túlijo kań cámoku a jáno kań cíke éma-lu. morwa colá wác-a-ta oca mormor kóli cák-a-ta. asíkaga ju ikúkaga móku áta-ma-la áku ki atá-la-ta keń tí a áku kań ja kéca ju káxcen wác-a-ta. "ar tí a áku kań ja sísitu ja éma-lu mú?" álicu ja imík-a-ta. kéca ju káxcen o wác-a-ta.   
 
+
+##アリス古典語化
+古：álicu ja cóma an sámoku an jánou cik em-eu cu-an wac-an oca mor mor koleu saku. asíkanga ju ikúkanga móku áta em-an áku ki áta-lau tí an ákeu kéca ju céma wacu. "ar tí an ákei súja em-u mú?" álicu ja imik-u. kéca ju céma ja wacu.  
 
 ## 資料から
 pom-u → mom-u;
