--- a/考察とか.md
+++ b/考察とか.md
@@ -49,6 +49,17 @@ n-C(有声阻害音) →C
 あたりがいわゆる「古典」っぽそう。
 ちょっと後に借用語増加かなあ
 
+## 牌音から得られる仮説
+パイグ語に**「開音節がより早期に割れる（現代語声調が無声のものはどうだろう）」**という音韻変化があったのではないかと仮説が立った。  
+### 根拠
+例に **冠**, **我**, **在**,**善**を用いると、
+古音は**え**, **ぺ**, **え**,**け**と反映する。（末子音が吹き飛んでるのは表記のせいか）  
+これは古牌音/æ/の反映であると思われる。  
+一方新音は**あい**, **ぱい**, **えむ**,**けつ**と反映する。このことから、
+**/ai/**, **/prai/**, **/æm/**,**/kæt/** のように（r性消失の前後は不確定）
+**æ -> ai, ɔ -> au, e -> ei, o -> ou** という変化が開音節では優先的に起きたのではないかということが示唆される。  
+ただ、タカン語の牌語形態素側の制約の可能性はある。
+
 
 
 
